Fix book copy edit : photo cover and return link
fix image display as a cover : truncate it

return link : add url to account on link

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -123,6 +123,10 @@ body {
     padding : 0 var(--main-padding-sides);
 }
 
+.block-return {
+    color: var(--gris-texte);
+}
+
 a {
     text-decoration: none;
     color: inherit;
