--- a/assets/css/pages/book-copy-edit.css
+++ b/assets/css/pages/book-copy-edit.css
@@ -8,6 +8,7 @@
     gap: 2rem;
     align-items: flex-start;
     background-color: var(--bg-color-light);
+    padding: 3.5rem 0;
 }
 
 .main-container__header--book-copy-edit {
@@ -29,7 +30,16 @@
     flex-flow: column nowrap;
     gap: 1rem;
     align-items: center;
-    text-align: center;
+    text-align: left;
+    color: var(--gris-texte);
+}
+
+.photo-upload__title {
+    width: 100%;
+}
+
+.photo-upload label{
+    width: 100%;
 }
 
 .container--book-detail .container__poster {
@@ -43,6 +53,7 @@
     flex: 1 1 auto;
     width: 100%;
     height: 100%;
+    margin : 0.67rem 0 0 0;
 }
 
 .photo-upload__image {
@@ -52,10 +63,16 @@
 }
 
 .photo-upload__action {
-    color: var(--vert-principal);
     text-decoration: underline;
     cursor: pointer;
     font-size: 0.88rem;
+    color: var(--gris-foncé);
+    margin: 0 0 0.5rem 0;
+}
+
+.photo-upload__footer {
+    width: 100%;
+    text-align: right;
 }
 
 .container__form-field--link:hover {
@@ -68,7 +85,7 @@
 .container__edit-book-copy {
     box-sizing: border-box;
     flex: 1 1 50%;
-    padding: 2rem;
+    padding: 0 2rem;
     width: auto;
 }
 
@@ -88,8 +105,14 @@
     display: flex;
     flex-flow: column nowrap;
     gap: 1.5rem;
+    flex: 1 0 auto;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
+.form--book-edit .form__label {
+    color: var(--gris-texte);
+}
 
 
 .form--book-edit .bigButton {
